<resources>
    <string name="app_name">AmbulanceAura</string>
    <string name="title_activity_hospital_map">Map</string>
    <string name="search_hospital">Search Hospital</string>
    <string name="remove_ambulance">Remove Ambulance</string>
    <string name="add_ambulance">Add Ambulance</string>
    <string name="set_initial_location">Set Initial Location</string>
    <string name="add_ambulance_details">Add Ambulance Details</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="ambulance_vehicle_number">Ambulance Vehicle Number</string>
    <string name="ambulance_id">Ambulance ID</string>
    <string name="name">Name</string>
    <string name="send_ecg_reports">Send ECG Reports</string>
    <string-array name="hospital_spec">
        <item>Accident</item>
        <item>Poisoning</item>
        <item>Drug overdose</item>
        <item>Cardiac arrest</item>
        <item>Shock</item>
        <item>Asthma exacerbation</item>
        <item>Impaired consciousness</item>
        <item>Hypoglycemia</item>
    </string-array>
    <string name="hospital_specialization">Hospital Specialization</string>
    <string name="patient_name">Patient Name</string>
    <string name="hosp" />
    <string name="search_hospital1">Search Hospital</string>
    <string name="patient_details">Patient Details</string>

    //auth
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Aura now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="todo">TODO</string>


</resources>
