<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.suraj.ambulanceaura.SearchHospital">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="47dp"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/PatientName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="21dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/patient_name" />

        <Spinner
            android:id="@+id/hospitalSpec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/PatientName"
            android:layout_marginTop="24dp"
            android:entries="@array/hospital_spec"
            android:prompt="@string/hosp"
            tools:layout_height="40dp" />

        <Button
            android:id="@+id/searchhosp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/PatientDetail"
            android:layout_marginTop="40dp"
            android:text="@string/search_hospital1" />

        <EditText
            android:id="@+id/PatientDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/hospitalSpec"
            android:layout_marginTop="26dp"
            android:ems="10"
            android:inputType="textMultiLine"
            android:singleLine="false"
            android:text="@string/patient_details" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
