<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginEnd="12dp"
    android:layout_marginLeft="12dp"
    android:layout_marginRight="12dp"
    android:layout_marginStart="12dp"
    android:layout_marginTop="12dp"
    tools:context="com.example.suraj.ambulanceaura.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/AddAmbulance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/SearchHospital"
            android:layout_marginTop="28dp"
            android:text="@string/add_ambulance"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="24dp"
            tools:layout_editor_absoluteY="166dp" />

        <Button
            android:id="@+id/SearchHospital"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="13dp"
            android:text="@string/search_hospital"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="102dp" />

        <Button
            android:id="@+id/RemoveAmbulance"
            android:layout_width="338dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/AddAmbulance"
            android:layout_marginTop="30dp"
            android:text="@string/remove_ambulance"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="225dp" />

        <Button
            android:id="@+id/send_ecg_reports"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/RemoveAmbulance"
            android:layout_marginTop="30dp"
            android:text="@string/send_ecg_reports" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
